--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="static/bug-icon-black.ico">
     <title>unexpected-mitm</title>
 </head>
-<body class="sidebar-hidden">
+<body class="sidebar-hidden theme-dark"> 
     <header>
         <div class="logo-icon"></div>
         <nav>
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-<div class="main theme-dark" tabindex="-1">
+<div class="main" tabindex="-1">
     <div class="content">
         <h1 id="unexpected-mitm">Unexpected-mitm</h1>
 <p><a href="http://badge.fury.io/js/unexpected-mitm"><img src="https://badge.fury.io/js/unexpected-mitm.svg" alt="NPM version"></a>
